Merging all of the work from feat/artifact-groups!! (#1265)
* JAX-RS generated classes for v2 of the Registry API.

* Lots of refactoring to start implementing v2 of the rest api

* JAX-RS generated classes for v2 of the Registry API.

* Added groupId concept to the storage layer

* JAX-RS generated classes for v2 of the Registry API.

* Update ArtifactgroupsResource.java

* Update ArtifactMetaData.java

* Update EditableMetaData.java

* Update SearchedVersion.java

* Update VersionMetaData.java

* Updated the REST API with some recent changes

* Handle serializer cache, simplify Streams storage (#1163)

* GlobalId Strategy should seed the Schema cache if it registers a schema #1148

* Simplify Streams storage, no need for async global id mapping.

* Updated the asyncmem storage

* JAX-RS generated classes for v2 of the Registry API.

* Regenerated the jax-rs layer after modifications to the v2 api design

* JAX-RS generated classes for v2 of the Registry API.

* Additional changes to the v2 REST api

* added jax-rs test for the /groups v2 api endpoint

* V2 api auth support (#1172)

* Add security paths for v2 api endpoints

* Remove localhost placeholder

* Simplify permission paths

* Fixed a failing unit test

* Added a test for multiple groups.

* JAX-RS generated classes for v2 of the Registry API.

* Added more tests and updated the in-memory storage to support contentId and contentHash

* JAX-RS generated classes for v2 of the Registry API.

* Implemented the /ids API endpoints and created tests for them

* minor change to the auth test and its superclass

* updated the asyncmem and ispn storages with latest changes

* removed an unused interface in the UI service

* Created a search REST test

* Stop polluting compatibility layer with REST beans

* Added UI support for groups in the Artifacts page and Upload Artifact modal

* Added UI support for groups.

* Rest client using java 11 h